--- a/PORTFOLIO/myportfolio.html
+++ b/PORTFOLIO/myportfolio.html
@@ -95,7 +95,7 @@
         <br />
         <br />
         <div class="container">
-          <div class="secondcolumn">
+          <div class="skills-quals">
             <h2 class="heading">Professional Development & Qualifications</h2>
             <br />
             <h4 class="headingtype">
@@ -114,7 +114,7 @@
             <br />
             <h4 class="headingtype">BSc in Psychology (First Class Honours)</h4>
           </div>
-          <div class="secondcolumn">
+          <div class="skills-quals">
             <h2 class="heading">Technical skills</h2>
             <br />
             <h4 class="headingtype">Programming Languages</h4>
@@ -139,39 +139,36 @@
     </div>
 
     <div class="container">
-      <div class="image">
+      <div class="column left-side">
         <img
           src="/Users/sn/Desktop/ESEN 🤎/PLAN - TECH👩🏻‍💻/PROJECT PORTFOLIO/PORTFOLIO/assets/images/canva.jpg"
           alt="canva-project"
           width="45%"
         />
       </div>
-      <div class="text">
-        <h2>PROJECT 1 | CANVA</h2>
+      <div class="column right-side">
+        <h2 class="heading">PROJECT 1 | CANVA</h2>
         <p>
-          For first project, I developed a blog to celebrate the CANVA
-          Application. As a part-time graphics designer I frequently use CANVA
-          to style subjects and utilise space elements.
+          For my first project, I developed a blog to celebrate the CANVA
+          Application whislt utilising HTML, CSS, and JavaScript. As a part-time
+          graphics designer I frequently use CANVA to style subjects and utilise
+          space elements.
         </p>
       </div>
     </div>
 
     <div class="container">
-      <div class="image">
+      <div class="column left-side">
         <img
           src="/Users/sn/Desktop/ESEN 🤎/PLAN - TECH👩🏻‍💻/PROJECT PORTFOLIO/PORTFOLIO/assets/images/Weather Project.png"
           alt="weather-project"
           width="45%"
         />
       </div>
-      <div class="text">
-        <h2>PROJECT 2 | WEATHER APPLICATION</h2>
-        <p>
-          For first project, I developed a blog to celebrate the CANVA
-          Application. As a part-time graphics designer I frequently use CANVA
-          to style subjects and utilise space elements.
+      <div class="column right-side">
+        <h2 class="heading">PROJECT 2 | WEATHER APPLICATION</h2>
+        <p> I then built a weather forcaster for 2 locations that interacted through user inputs.
         </p>
-      </div>
     </div>
   </body>
 </html>
